Clean up and code style, review for trivial defects, namespace mixins.